# stable-coin

./: README.md  client.js  package-lock.json  package.json  read-data.ts
programs/stable-fun/: Cargo.toml
programs/stable-fun/src/: chainlink_data_feed.rs  lib.rs  state.rs
tests/: stable-fun-int-test.ts
